# covid-etl-analysis-tools-and-ai-reporting-system

./: README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: deploy.yaml
.streamlit/: config.toml
SQL/: ETL.sql  ETL_notebook.ipynb
data/cleaned/: covid_summary.csv
data/raw/: Covid_data.csv
docs/: ai_intelligence_setup.md  business_context.md  cloud_production.md  excel_analysis.md  index.md  infrastructure.md  n8n_workflow.md  powerbi_analysis.md
notebooks/: 01_initial_eda.ipynb
postgres/: postgres_etl
src/: app.py
