[project]
name = "covid-early-warning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "jupyter>=1.1.1",
    "jupyter-core>=5.9.1",
    "matplotlib>=3.9.0",
    "mkdocs-material>=9.7.4",
    "pandas<3",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
    "streamlit==1.55.0",
]
